# speech-to-text-finetune

./: .pre-commit-config.yaml  404.html  README.md  index.html  objects.inv  pyproject.toml
.github/workflows/: docs.yaml  tests.yaml
api/: index.html
customization/: index.html
demo/: config.yaml  khmer.ipynb  khmer_dataset_report.html  model_comparison_app.py  transcribe_app.py
docs/: customization.md  getting-started.md  step-by-step-guide.md
example_data/: config_mms.yaml  config_whisper.yaml
future-features-contributions/: index.html
getting-started/: index.html
search/: search_index.json
src/speech_to_text_finetune/: config.py  data_process.py  finetune_mms_adapter.py  finetune_whisper.py
step-by-step-guide/: index.html
tests/: conftest.py
tests/e2e/: config_mms.yaml  config_whisper.yaml
tests/integration/: test_process_local_dataset.py
tests/unit/: test_config.py  test_data_process.py
