[build-system]
requires = ["setuptools>=48", "setuptools_scm[toml]>=6.3.1"]
build-backend = "setuptools.build_meta"

[project]
name = "speech-to-text-finetune"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
dynamic = ["version"]
dependencies = [
  "accelerate>=1.11.0",
  "datacollective",
  "datasets[audio]>=4.4.0",
  "evaluate>=0.4.6",
  "gradio>=5.49.1",
  "jiwer>=4.0.0",
  "librosa>=0.11.0",
  "loguru>=0.7.3",
  "python-iso639",
  "soundfile>=0.13.1",
  "tensorboard>=2.20.0",
  "transformers>=4.57.1",
]

[dependency-groups]
demo = [
  "python-dotenv",
  "pyyaml",
  "ipykernel>=7.2.0",
  "scikit-learn>=1.5.0",
  "ydata-profiling>=4.18.1",
]

docs = [
  "mkdocs",
  "mkdocs-material",
  "mkdocstrings-python",
]

tests = [
  "pre-commit",
  "pytest>=8,<9",
  "pytest-sugar>=0.9.6",
]

[project.urls]
Documentation = "https://mozilla-ai.github.io/speech-to-text-finetune/"
Issues = "https://github.com/mozilla-ai/speech-to-text-finetune/issues"
Source = "https://github.com/mozilla-ai/speech-to-text-finetune"

[tool.setuptools.packages.find]
exclude = ["tests", "tests.*"]
where = ["src"]
namespaces = false

[tool.setuptools_scm]
